[package]
name = "MAPLE_BOT_RUST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.18.1", features = ["macros", "rt", "rt-multi-thread"]}
const_format = "0.2.22"
num = "0.4.0"
serenity = { version="0.11.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }